--- a/index.html
+++ b/index.html
@@ -1,14 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Primes</title>
+	<head>
+		<meta charset="UTF-8">
+		<title>Primes</title>
+		<link rel="stylesheet" href="css/common.css">
+		<link rel="stylesheet" href="css/grid-system.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/utilities.css">
+		<link rel="stylesheet" href="css/elegant-fonts.css">
+		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/ionicons.min.css">
+		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+	</head>
+	<body>
+		<section><!--Comienzo de section-->
+			<div class="container-fluid fondog">
+				<div class="row text-center">
+					<div class="col-12">
+						<h2>PORTFOLIO</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus repellendus accusamus vero distinctio.</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12 ">
+						<ul class="nav ">
+				<li class="active"><a href="">Show All</a></li>
+				<li><a href="">Identify</a></li>
+				<li><a href="">Web Design</a></li>
+				<li><a href="">Graphic</a></li>
+				<li><a href="">Logo</a></li>
+			</ul>
+					</div>
+				</div>
+				<div class="row text-center"><!--Comienzo de cajas blancas-->
+					<div class="col-6 fondocaj">
+						<img class="imagenes" src="img/grid/1a.jpg" alt="imagen 1">
+						<h2>World Clock Widge</h2>
+						<p >Logo / Web Design</p>
+					</div>
+					<div class="col-6 fondocaj">
+						<img class="imagenes" src="img/grid/2a.jpg" alt="imagen 2">
+						<h2>Dashboard</h2>
+						<p>Web Design / Graphic</p>
+					</div>
+				</div>
+				<div class="row text-center">
+					<div class="col-6 fondocaj">
+						<img class="imagenes" src="img/grid/3a.jpg" alt="imagen 1">
+						<h2>To-Do Dashboard</h2>
+						<p>Graphic / Logo</p>
+					</div>
+					<div class="col-6 fondocaj">
+						<img class="imagenes" src="img/grid/4a.jpg" alt="imagen 2">
+						<h2>Events and More</h2>
+						<p>Graphic / Logo</p>
+					</div>
+				</div>
+				<div class="row text-center">
+					<div class="col-6 fondocaj">
+						<img class="imagenes" src="img/grid/5a.jpg" alt="imagen 1">
+						<h2>WhereTO App</h2>
+						<p>Web Design/ Identify </p>
+					</div>
+					<div class="col-6 fondocaj">
+						<img class="imagenes" src="img/grid/6a.jpg" alt="imagen 2">
+						<h2>Dashboard</h2>
+						<p>Identify / Web Design</p>
+					</div><!--Terminan cajas blancas-->
+				</div>
+				<div class="row">
+					<div class="col-12">
+						<button class="boton">Load More</button>
+					</div>
+				</div>
+			</div>
+		</section><!--Termina section-->
+		<section>
+			<div class="container-fluid fondo1">
+				<div class="row">
+					<div class="col-12">
+						<p class="texto">Quisque aliquam odio eu magna sodales, vel interdum  erat suscipit.<br>
+						Mauris ut porttitor tellus.</p>
+						<p class="texto1"><b>Call to Action</b> </p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 text-center"></div>
+			</div>
+		</section>
 
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
 
-</head>
-<body>
-</body>
+	</body>
 </html>
