Segunda parte terminada

--- a/index.html
+++ b/index.html
@@ -76,17 +76,68 @@
 			</div>
 		</section><!--Termina section-->
 		<section>
-			<div class="container-fluid fondo1">
-				<div class="row">
+			<div class="container-fluid fondog">
+				<div class="row fondo1">
 					<div class="col-12">
 						<p class="texto">Quisque aliquam odio eu magna sodales, vel interdum  erat suscipit.<br>
 						Mauris ut porttitor tellus.</p>
 						<p class="texto1"><b>Call to Action</b> </p>
 					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-12 text-center"></div>
+				<div class="row">
+					<div class="col-12 text-center">
+						<h2>Chose the package</h2>
+						<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-4 fondocaja text-center">
+						<div class="caja">
+							<p class="texto3">Standard</p>
+							<div class="caja2">
+								<p>From $45.99 per month</p>
+							</div>
+							<p class="text">Vestibulum est magna</p>
+							<hr>
+							<p class="text">Mauris auctor massa libero</p>
+							<hr>
+							<p class="text">Praesent  magna tortor</p>
+							<p class="text">Cras et fermentum  massa</p>
+							<button class="boton1">Purchase</button>
+
+						</div>
+					</div>
+					<div class="col-4 fondocaja text-center">
+						<div class="cajaa">
+							<p class="texto3">Premium</p>
+							<div class="caja2">
+								<p>From $75.00 per month</p>
+							</div>
+							<p class="text">Vestibulum est magna</p>
+							<hr>
+							<p class="text">Mauris auctor massa libero</p>
+							<hr>
+							<p class="text">Praesent  magna tortor</p>
+							<p class="text">Cras et fermentum  massa</p>
+							<button class="boton1">Purchase</button>
+						</div>
+					</div>
+					<div class="col-4 fondocaja text-center">
+						<div class="caja">
+							<p class="texto3">Ultimate</p>
+							<div class="caja2">
+								<p>From $99.99 per month</p>
+							</div>
+							<p class="text">Vestibulum est magna</p>
+							<hr>
+							<p class="text">Mauris auctor massa libero</p>
+							<hr>
+							<p class="text">Praesent  magna tortor</p>
+							<p class="text">Cras et fermentum  massa</p>
+							<button class="boton1">Purchase</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 
