--- a/index.html
+++ b/index.html
@@ -13,6 +13,165 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
+		<header>
+			<nav class="bgMenu">
+				<div class="container-fluid">
+					<div class="row"> <!-- Icono -->
+						<div class="col-1 pd-top3">
+							<img src="img/star.png">
+						</div>
+						<div class="col-3 text-white">
+							<h2 class="padding4">PRIMES</h2>
+						</div>
+						<div class="col-8"><!-- Menu -->
+							<ul class="ulmenu">
+								<li class="limenu"><a href="#" class="a-none-decoration text-green">Home</a></li>
+								<li class="limenu"><a href="#" class="a-none-decoration text-white">Features</a></li>
+								<li class="limenu"><a href="#" class="a-none-decoration text-white">Portfolio</a></li>
+								<li class="limenu"><a href="#" class="a-none-decoration text-white">Pricing</a></li>
+								<li class="limenu"><a href="#" class="a-none-decoration text-white">Contact</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12 font-size1 text-center text-white pt-10"><!-- texto1 -->
+							<p>Launch Your Business whit Primes</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12 pt-5 text-center text-white"><!-- texto2  -->
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ulabore et dolore magna aliqua.<br> Ut enim ad minim veniam,
+							</p>
+						</div>
+					</div>
+					<div class="row"><!-- Botones -->
+						<div class="col-6 pt-5 pl-38">
+							<button class="botonMenu "><a href="#" class="a-none-decoration text-white">Our Portfolio</a></button>
+						</div>
+						<div class="col-6 pt-5 pl-3">
+							<button class="botonMenu"><a href="#" class="a-none-decoration text-white">Learn more</a></button>
+						</div>
+					</div>
+				</div><!-- Fin de contenedor -->
+			</nav>
+		</header>
+		<section>
+			<div class="container">
+				<div class="row pt8-pb5"><!-- Primeros iconos -->
+					<div class="col-4 text-center">
+						<img src="img/icons/presentation.png">
+						<h3>Lorem ipsum</h3>
+						<p class="text-gray">Lorem ipsum dolor sit amet<br> consectetur adipisicing elit, sed do eiusmod<br>
+						tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam.</p> 
+					</div>
+					<div class="col-4 text-center">
+						<img src="img/icons/graph.png">
+						<h3>Lorem ipsum</h3>
+						<p class="text-gray">Lorem ipsum dolor sit amet<br> consectetur adipisicing elit, sed do eiusmod<br>
+						tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam.</p> 
+					</div>
+					<div class="col-4 text-center">
+						<img src="img/icons/graphic.png">
+						<h3>Lorem ipsum</h3>
+						<p class="text-gray">Lorem ipsum dolor sit amet<br> consectetur adipisicing elit, sed do eiusmod<br>
+						tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam.</p> 
+					</div>
+				</div>
+				<div class="row pt3-pb13"><!-- Segundos iconos -->
+					<div class="col-4 text-center">
+						<img src="img/icons/pie-chart.png">
+						<h3>Lorem ipsum</h3>
+						<p class="text-gray">Lorem ipsum dolor sit amet<br> consectetur adipisicing elit, sed do eiusmod<br>
+						tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam.</p> 
+					</div>
+					<div class="col-4 text-center">
+						<img src="img/icons/point-of-service.png">
+						<h3>Lorem ipsum</h3>
+						<p class="text-gray">Lorem ipsum dolor sit amet<br> consectetur adipisicing elit, sed do eiusmod<br>
+						tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam.</p> 
+					</div>
+					<div class="col-4 text-center">
+						<img src="img/icons/receipt.png">
+						<h3>Lorem ipsum</h3>
+						<p class="text-gray">Lorem ipsum dolor sit amet<br> consectetur adipisicing elit, sed do eiusmod<br>
+						tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam.</p> 
+					</div>
+				</div>
+			</div><!-- Fin de Container -->
+		</section>
+		<section>
+			<div class="container-fluid bg-gray">
+				<div class="row">
+					<div class="col-12 text-center font-size2">
+						<p class="pt-5">More Features</p>
+					</div>
+				</div>
+				<div class="row pb-3">
+					<div class="col-12 text-center">
+						<img src="img/laptop-features.png" class="imgtamaño">
+					</div>
+				</div>
+			</div><!-- Fin de contenedor fluido -->
+		</section>
+		<section>
+			<div class="container">
+				<div class="row pt-5 pb-3"><!-- Seccion de iconos 1 -->
+					<div class="col-1 pl-5">
+						<img src="img/icons1/tar.png">
+					</div>
+					<div class="col-5">
+						<p class="text-gray"><b class="color-black">Lorem ipsum</b><br> dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+					</div>
+					<div class="col-1 pl-5">
+						<img src="img/icons1/food.png">
+					</div>
+					<div class="col-5">
+						<p class="text-gray"><b class="color-black">Lorem ipsum</b><br> dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+					</div>
+				</div>
+				<div class="row pb-3"><!-- Seccion de iconos 2-->
+					<div class="col-1 pl-5">
+						<img src="img/icons1/justice.png">
+					</div>
+					<div class="col-5">
+						<p class="text-gray"><b class="color-black">Lorem ipsum</b><br> dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+					</div>
+					<div class="col-1 pl-5">
+						<img src="img/icons1/money.png">
+					</div>
+					<div class="col-5">
+						<p class="text-gray"><b class="color-black">Lorem ipsum</b><br> dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+					</div>
+				</div>
+				<div class="row pb-5"><!-- Seccion de iconos 3 -->
+					<div class="col-1 pl-5">
+						<img src="img/icons1/piggy-bank.png">
+					</div>
+					<div class="col-5">
+						<p class="text-gray"><b class="color-black">Lorem ipsum</b><br> dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+					</div>
+					<div class="col-1 pl-5">
+						<img src="img/icons1/suitcase.png">
+					</div>
+					<div class="col-5">
+						<p class="text-gray"><b class="color-black">Lorem ipsum</b><br> dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+					</div>
+				</div>
+			</div><!-- Fin de contenedor -->
+		</section>
 		<section><!--Comienzo de section-->
 			<div class="container-fluid fondog">
 				<div class="row text-center">
@@ -140,7 +299,82 @@
 				</div>
 			</div>
 		</section>
-
-
+		<section>
+			<div class="row pt-5"><!-- Customers -->
+				<div class="col-12 text-center">
+					<p class="font-size2 pb-3 text-gray">What our customers have to say...</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 text-center pb-1">
+					<img src="img/customer.jpg" alt="Perfil" class="imgCustomer imgcircular">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 text-center text-gray pb-5">	
+					<p class="pb-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua.</p><p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua</p><p>laborum.</p>
+					<h4>-Diana Rosswert</h4>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="container-fluid fondocon bg-img-block">
+				<div class="row text-center">
+					<div class="col-12 text-white">
+						<h2>Contact Us</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi dicta, tempore quod fugiat laborum eveniet eum, nulla expedita provident qui possimus ipsa consectetur, dolore asperiores suscipit debitis quia, natus amet.</p>
+					</div>
+				</div>
+				<div class="row text-center">
+					<div class="col-6">
+						<p class="text-white">Send Message</p>
+						<form>
+							<p><input type="email" placeholder="Email"></p>
+							<p><input type="text" placeholder="Subject"></p>
+							<p><textarea placeholder="Message"></textarea></p>
+							<p><button class="botona">Submit</button></p>
+						</form>
+					</div>
+					<div class="col-6 text-white">
+						<h2 >About Us</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto eos maiores, commodi aspernatur earum magnam cum soluta mollitia nisi voluptate debitis, perspiciatis nesciunt quas dolore odit excepturi voluptatem blanditiis nobis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto magnam cupiditate deserunt expedita tempore consequatur doloribus cumque? Totam et, mollitia autem, pariatur ducimus quae ullam iste distinctio debitis esse, illo.</p>
+						<h2>Address</h2>
+						<p>13 Brant Street, Burlington, Ontario, Canada</p>
+						<p>Phone: 0987 098 234 1234</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="container-fluid">
+				<div class="row text-center">
+					<div class="col-12">
+						<h1>Follow Us!</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua.</p><p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliquua.</p>
+					</div>
+				</div>
+				<div class="row text-center">
+					<div class="col-12">
+						<img class="iconos" src="img/email.png" alt="email">
+						<img class="iconos" src="img/in.png" alt="email">
+						<img class="iconos" src="img/facebook.png" alt="email">
+						<img class="iconos" src="img/twitter.png" alt="email">
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer>
+			<div class="container-fluid">
+				<div class="row text-center text-white">
+					<div class="col-12">
+						<p>©Primes 2015 - laboratoria.la</p>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
